feat(docker): add certificate volume mount for minio https support
Add volume mount for SSL certificates (./certs:/root/.minio/certs) to
enable HTTPS support. Required for Gerrit LFS plugin which uses AWS S3
SDK that defaults to HTTPS connections.

Certificates should be placed in ./certs directory as:

- public.pem (certificate)
- private.key (private key)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,12 @@ services:
       # Use relative path (./data) or absolute path (/path/to/minio/data)
       # Example: - /path/to/minio/data:/data
       - ./data:/data
+      # Mount certificates directory for HTTPS support
+      # Place your SSL certificates (public.pem and private.key) in ./certs directory
+      # MinIO will automatically detect and use certificates named:
+      # - public.pem for the certificate
+      # - private.key for the private key
+      - ./certs:/root/.minio/certs
       # Alternative: Use named volume (uncomment below and comment above)
       # - minio-data:/data
     environment:
